2002-12-16  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* version.C.in: update (again) release date for 1.2.2

2002-12-13  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* version.C.in: update release date for 1.2.2

2002-12-12  Dekel Tsur  <dekelts@tau.ac.il>

	* encoding.C: Patch from Isam Bayazidi: Fix Arabic shaping.

2002-11-22  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* commandtags.h: 
	* LyXAction.C (init): remove LFUN_VECTOR

2002-11-18  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* converter.C (convert): if from and to files are the same, use a
	temporary files as intermediary

2002-11-19  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* lyx_main.C (queryUserLyXDir): re-run automatically the configure
	script if it is newer than the lyxrc.defaults in user directory

2002-10-16  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* converter.C (view): add support for $$i (file name) and $$p
	(file path) for the viewer command. If $$i is not specified, then
	it is appended to the command (for compatibility with old syntax)

2002-10-24  Dekel Tsur  <dekelts@tau.ac.il>

	* paragraph.C (TeXOnePar): Fix bug with language changes in nested
	environment.

2002-10-14  Juergen Vigna  <jug@sad.it>

	* undo_funcs.C (textHandleUndo): alter the order in which the
	new undopar is added to the LyXText, as we have to set first
	the right prev/next and then add it as otherwise the rebuild of
	LyXText is not correct. Also reset the cursor to the right paragraph,
	with this IMO we could remove the hack in "redoParagraphs()".

2002-10-14  Dekel Tsur  <dekelts@tau.ac.il>

	* FontInfo.C (query): Ignore bogus matches of scalable fonts.

2002-10-09  Angus Leeming  <leeming@lyx.org>

	* Bufferview_pimpl.C (dispatch): call InsetCitation::setLoadingBuffer
	to turn off an optimisation if a new inset is to be inserted.

2002-10-07  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>
