@@ -1045,7 +1045,7 @@ string const LyXFunc::dispatch(kb_action action, string argument)
 		} else {
 			searched_string = last_search;
 		}
-		bool fw = (action == LFUN_WORDFINDBACKWARD);
+		bool fw = (action == LFUN_WORDFINDFORWARD);
 		if (!searched_string.empty()) {
 			lyxfind::LyXFind(owner->view(), searched_string, fw);
 		}
